--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.5"
