--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.8.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "daisyui": "^5.0.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "next-intl": "^3.26.5",
