--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.8.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
