--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.3",
     "framer-motion": "^12.4.7",
     "next": "15.1.7",
@@ -19,7 +20,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
