--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-international-phone": "^4.5.0",
     "react-phone-input-2": "^2.15.1",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.1.0",
